frontend_public/static/css/style.css
/* ... */
.top-8{
  top: 2rem;
}

.top-full{
  top: 100%;
}

.-z-10{
  z-index: -10;
}

.z-10{
  z-index: 10;
}

.z-20{
  z-index: 20;
}

.z-30{
  z-index: 30;
}

.z-\[9999\]{
  z-index: 9999;
}

.order-1{
  order: 1;
}

.m-0{
  margin: 0px;
}

.m-auto{
  margin: auto;
}

.-mx-28{
  margin-left: -7rem;
  margin-right: -7rem;
}

.-my-2{
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
}

.mx-4{
  margin-left: 1rem;
  margin-right: 1rem;
}

.mx-auto{
  margin-left: auto;
  margin-right: auto;
}

.my-20{
  margin-top: 5rem;
  margin-bottom: 5rem;
}

.my-4{
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.my-6{
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.-mb-20{
  margin-bottom: -5rem;
}

.-ml-32{
  margin-left: -8rem;
}

.-mt-10{
  margin-top: -2.5rem;
}

.-mt-12{
  margin-top: -3rem;
}

.-mt-16{
  margin-top: -4rem;
}

.-mt-24{
  margin-top: -6rem;
}

.-mt-32{
  margin-top: -8rem;
}

.-mt-36{
  margin-top: -9rem;
}

.mb-1{
  margin-bottom: 0.25rem;
}

.mb-12{
  margin-bottom: 3rem;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.mb-3{
  margin-bottom: 0.75rem;
}

.mb-4{
  margin-bottom: 1rem;
}

.mb-5{
  margin-bottom: 1.25rem;
}

.mb-6{
  margin-bottom: 1.5rem;
}

.mb-8{
  margin-bottom: 2rem;
}

.ml-1{
  margin-left: 0.25rem;
}

.ml-10{
  margin-left: 2.5rem;
}

.ml-2{
  margin-left: 0.5rem;
}

.ml-2\.5{
  margin-left: 0.625rem;
}

.ml-4{
  margin-left: 1rem;
}

.ml-6{
  margin-left: 1.5rem;
}

.ml-8{
  margin-left: 2rem;
}

.ml-\[1\.625rem\]{
  margin-left: 1.625rem;
}

.mr-1{
  margin-right: 0.25rem;
}

.mr-3{
  margin-right: 0.75rem;
}

.mr-4{
  margin-right: 1rem;
}

.mt-1{
  margin-top: 0.25rem;
}

.mt-12{
  margin-top: 3rem;
}

.mt-16{
  margin-top: 4rem;
}

.mt-2{
  margin-top: 0.5rem;
}

.mt-4{
  margin-top: 1rem;
}

.mt-6{
  margin-top: 1.5rem;
}

.mt-8{
  margin-top: 2rem;
}

.mt-\[30\%\]{
  margin-top: 30%;
}

.block{
  display: block;
}

.inline{
  display: inline;
}

.flex{
  display: flex;
}

.inline-flex{
  display: inline-flex;
}

.grid{
  display: grid;
}

.hidden{
  display: none;
}

.aspect-square{
  aspect-ratio: 1 / 1;
}

.h-1\/4{
  height: 25%;
}

.h-12{
  height: 3rem;
}

.h-16{
  height: 4rem;
}

.h-24{
  height: 6rem;
}

.h-4{
  height: 1rem;
}

.h-40{
  height: 10rem;
}

.h-48{
  height: 12rem;
}

.h-5{
  height: 1.25rem;
}

.h-6{
  height: 1.5rem;
}

.h-64{
  height: 16rem;
}

.h-8{
  height: 2rem;
}

.h-80{
  height: 20rem;
}

.h-96{
  height: 24rem;
}

.h-\[1000px\]{
  height: 1000px;
}

.h-\[1100px\]{
  height: 1100px;
}

.h-\[1200px\]{
  height: 1200px;
}

.h-\[200\%\]{
  height: 200%;
}

.h-\[500px\]{
  height: 500px;
}

.h-\[700px\]{
  height: 700px;
}

.h-\[800px\]{
  height: 800px;
}

.h-full{
  height: 100%;
}

.max-h-\[90vh\]{
  max-height: 90vh;
}

.min-h-screen{
  min-height: 100vh;
}

.\!w-32{
  width: 8rem !important;
}

.w-0\.5{
  width: 0.125rem;
}

.w-1\/2{
  width: 50%;
}

.w-1\/3{
  width: 33.333333%;
}

.w-1\/4{
  width: 25%;
}

.w-16{
  width: 4rem;
}

.w-24{
  width: 6rem;
}

.w-32{
  width: 8rem;
}

.w-4{
  width: 1rem;
}

.w-48{
  width: 12rem;
}

.w-5{
  width: 1.25rem;
}

.w-6{
  width: 1.5rem;
}

.w-64{
  width: 16rem;
}

.w-72{
  width: 18rem;
}

.w-80{
  width: 20rem;
}

.w-96{
  width: 24rem;
}

.w-\[1200px\]{
  width: 1200px;
}

.w-\[1400px\]{
  width: 1400px;
}

.w-\[500px\]{
  width: 500px;
}

.w-\[800px\]{
  width: 800px;
}

.w-\[900px\]{
  width: 900px;
}

.w-auto{
  width: auto;
}

.w-full{
  width: 100%;
}

.max-w-2xl{
  max-width: 42rem;
}

.max-w-3xl{
  max-width: 48rem;
}

.max-w-4xl{
  max-width: 56rem;
}

.max-w-5xl{
  max-width: 64rem;
}

.max-w-6xl{
  max-width: 72rem;
}

.max-w-\[548px\]{
  max-width: 548px;
}

.max-w-md{
  max-width: 28rem;
}

.max-w-none{
  max-width: none;
}

.max-w-sm{
  max-width: 24rem;
}

.max-w-xl{
  max-width: 36rem;
}

.max-w-xs{
  max-width: 20rem;
}

.flex-1{
  flex: 1 1 0%;
}

.flex-shrink-0{
  flex-shrink: 0;
}

.shrink-0{
  flex-shrink: 0;
}

.flex-grow{
  flex-grow: 1;
}

.grow{
  flex-grow: 1;
}

.-translate-x-1\/2{
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/2{
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.translate-y-1\/2{
  --tw-translate-y: 50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.translate-y-3{
  --tw-translate-y: 0.75rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-rotate-\[4deg\]{
  --tw-rotate: -4deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform{
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

@keyframes endless{
  0%{
    transform: translateY(0);
  }

  100%{
    transform: translateY(-245px);
  }
}

.animate-endless{
  animation: endless 20s linear infinite;
}

@keyframes float{
  0%{
    transform: translateY(3%);
  }

  50%{
    transform: translateY(-3%);
  }

  100%{
    transform: translateY(3%);
  }
}

.animate-float{
  animation: float 2s ease-in-out infinite;
}

.cursor-not-allowed{
  cursor: not-allowed;
}

.resize{
  resize: both;
}

.grid-flow-col{
  grid-auto-flow: column;
}
/* ... */

